--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,10 +6,12 @@
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 100px;
 }
 
 .footer {
